# nrf52sdk_toolchain_cmake

./: .gitignore  CMakeLists.txt  bld.bat  env_vars.bat  myexe.cpp  mylib.cpp  readme.md  script.ld  script2.ld
cmake/toolchain/: nrf52810.cmake  nrf52811.cmake  nrf52832.cmake  nrf52840.cmake  nrf52_toolchain.cmake  support_functions.cmake
components/softdevice/s140/toolchain/armgcc/: armgcc_s140_nrf52840_xxaa.ld
